--- a/SDL/SDL.vcxproj
+++ b/SDL/SDL.vcxproj
@@ -22,6 +22,8 @@
     <ClCompile Include="source\Game.cpp" />
     <ClCompile Include="source\ImageRenderer.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\RenderManager.cpp" />
+    <ClCompile Include="source\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Game.h" />
@@ -29,6 +31,8 @@
     <ClInclude Include="source\ImageRenderer.h" />
     <ClInclude Include="source\Object.h" />
     <ClInclude Include="source\Renderer.h" />
+    <ClInclude Include="source\RenderManager.h" />
+    <ClInclude Include="source\Transform.h" />
     <ClInclude Include="source\Vector2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
